deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-final
  labels:
    app: lab-final
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab-final
  template:
    metadata:
      labels:
        app: lab-final
    spec:
      containers:
      - name: lab-final
        image: leonardo2552/lab-final:1.0
        ports:
        - containerPort: 3000
