clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-lab-final
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: lab-final
