ingresscontroller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-lab-info
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: host.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ci-lab-final
            port:
              number: 80
